	* src/common/na-object-id-fn.h:
	* src/common/na-object-id.c (na_object_id_set_for_copy):
	Add a relabel argument.
	Remove useless debug trace.

	* src/common/na-iio-provider.c (na_iio_provider_get_items_tree):
	Dump the hierarchy tree before the alphabetical sort.
	Implement the new actions sorting semantic when loading the tree.
	Move the sorting functions to NAPivot class.

	* src/common/na-iprefs.c:
	* src/common/na-iprefs.h (na_iprefs_is_alphabetical_order):
	Renamed as na_iprefs_get_alphabetical_order().
	Move NAIPrefs data to instance object.

	* src/common/na-pivot.c:
	* src/common/na-pivot.h
	(na_pivot_sort_alpha_asc, na_pivot_sort_alpha_desc): New functions.

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.c (base_iprefs_get_bool,
	base_iprefs_set_bool):
	Replace the BaseWindow argument by a BaseIPrefs	one.
	Define three new UI preferences.

	* src/nact/nact-assistant-export.c:
	Implements IActionsList::get_treeview_name virtual function.
	Remove useless NAIPrefs implementation.

	* src/nact/nact-clipboard.c:
	* src/nact/nact-main-window.c:
	Now implements the BaseIPrefs interface.

	* src/nact/nact-main-window.c (nact_main_window_action_exists):
	No more check for action existancy in NAPivot.
	No more forward nact-tab-updatable-item-updated signal.
	Implements IActionsList::get_treeview_name virtual function.
	Remove useless NAIPrefs implementation.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h
	(nact_iactions_list_collapse_all, nact_iactions_list_expand_all):
	New functions.
	Remove useless nact-iactions-list-item-updated signal.
	Connect instead to nact-tab-updatable-item-updated signal.
	(get_treeview_name): New pure virtual function.

	* src/nact/nact-main-menubar.c (on_duplicate_activated):
	Takes advantage of new UI preferences.
	Define new Expand all/Collapse all menu items.

	* src/nact/nact-preferences-editor.c:
	Edit the new UI preferences.
	Do not implement BaseIPrefs nor NAIPrefs interfaces.