@@ -1609,7 +1609,7 @@ Be warned: you will not be prompted another time. This mode may be dangerous.</p
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
-          <object class="GtkNotebook" id="notebook1">
+          <object class="GtkNotebook" id="PreferencesNotebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
